# vebinar1

./: CMakeLists.txt
Vevinar1/: CMakeLists.txt  inout.h  main.cpp  print.cpp  read.cpp
